--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
@@ -37,6 +37,7 @@ content:
 hidden:
   field_related_teachers: true
   field_vih_class_class_packages: true
+  field_vih_class_color: true
   field_vih_class_material_price: true
   field_vih_class_price_addition: true
   langcode: true
