--- a/config/sync/field.field.node.vih_long_cource.field_vih_cource_contact_person.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_vih_cource_contact_person.yml
@@ -23,6 +23,7 @@ settings:
       type: _none
     target_bundles: null
     sort:
-      field: _none
+      field: name
+      direction: ASC
     auto_create: false
 field_type: entity_reference
