--- a/config/sync/core.entity_form_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_form_display.block_content.banner.default.yml
@@ -9,7 +9,7 @@ dependencies:
     - field.field.block_content.banner.field_link
   module:
     - entity_browser
-    - link
+    - link_class
     - workbench_moderation
 id: block_content.banner.default
 targetEntityType: block_content
@@ -33,8 +33,11 @@ content:
     settings:
       placeholder_url: ''
       placeholder_title: ''
+      link_class_mode: manual
+      link_class_force: btn-arrow
+      link_class_select: ''
     third_party_settings: {  }
-    type: link_default
+    type: link_class_field_widget
   info:
     type: string_textfield
     weight: -5
