--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -7,6 +7,7 @@ module:
   ckeditor: 0
   config: 0
   contact: 0
+  contact_block: 0
   contact_storage: 0
   contextual: 0
   ctools: 0
@@ -43,6 +44,7 @@ module:
   lightning_media_video: 0
   lightning_workflow: 0
   link: 0
+  link_class: 0
   linkit: 0
   locale: 0
   logo_overlay: 0
