--- a/config/sync/field.field.paragraph.1_column_action_centered.field_background_image.yml
+++ b/config/sync/field.field.paragraph.1_column_action_centered.field_background_image.yml
@@ -28,11 +28,11 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: ''
+    uuid: 60b29283-a46e-4e20-9bd8-de2ee1e6af7a
     alt: ''
     title: ''
-    width: null
-    height: null
+    width: 1400
+    height: 934
   handler: 'default:file'
   handler_settings: {  }
 field_type: image
