--- a/config/sync/user.role.layout_manager.yml
+++ b/config/sync/user.role.layout_manager.yml
@@ -19,3 +19,4 @@ permissions:
   - 'administer panelizer node vih_long_course_order defaults'
   - 'administer panelizer node vih_short_course defaults'
   - 'administer panelizer node vih_short_course_order defaults'
+  - 'administer panelizer node event defaults'
