--- a/config/sync/views.view.class_packages_frontpage.yml
+++ b/config/sync/views.view.class_packages_frontpage.yml
@@ -316,6 +316,42 @@ display:
           entity_type: taxonomy_term
           entity_field: vid
           plugin_id: bundle
+        field_vih_show_on_frontpage_value:
+          id: field_vih_show_on_frontpage_value
+          table: taxonomy_term__field_vih_show_on_frontpage
+          field: field_vih_show_on_frontpage_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
       sorts: {  }
       title: Fagpakker
       header:
