--- a/config/sync/core.entity_view_display.node.vih_course_period.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_course_period.default.yml
@@ -11,8 +11,15 @@ dependencies:
   module:
     - datetime
     - entity_reference_revisions
+    - panelizer
     - text
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.vih_course_period.default
 targetEntityType: node
 bundle: vih_course_period
@@ -50,5 +57,7 @@ content:
     type: datetime_default
   links:
     weight: 100
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
