--- a/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.default.yml
@@ -4,8 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.node.vih_long_cource.body
-    - field.field.node.vih_long_cource.field_course_image
-    - field.field.node.vih_long_cource.field_laengde
     - field.field.node.vih_long_cource.field_paragraphs
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_periods
@@ -15,7 +13,6 @@ dependencies:
     - node.type.vih_long_cource
   module:
     - entity_reference_revisions
-    - image
     - panelizer
     - text
     - user
@@ -25,6 +22,200 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+    displays:
+      default:
+        blocks:
+          c12989f5-4fde-4943-8996-78f97b0ab191:
+            id: 'entity_field:node:uid'
+            label: 'Authored by'
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: hidden
+              type: author
+              settings: {  }
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -4
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: c12989f5-4fde-4943-8996-78f97b0ab191
+          a210ea00-85b6-4b07-b1d9-9c17e8e2c23b:
+            id: 'entity_field:node:created'
+            label: 'Authored on'
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: hidden
+              type: timestamp
+              settings:
+                date_format: medium
+                custom_date_format: ''
+                timezone: ''
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -3
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: a210ea00-85b6-4b07-b1d9-9c17e8e2c23b
+          abc4b83d-2f2a-4563-903e-ca2366c12f09:
+            id: 'entity_field:node:body'
+            label: Body
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: hidden
+              type: text_default
+              settings: {  }
+              third_party_settings: {  }
+              weight: 0
+            region: left
+            weight: -3
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: abc4b83d-2f2a-4563-903e-ca2366c12f09
+          c76fca84-ec18-44ac-8226-79742e072adb:
+            id: 'entity_field:node:field_paragraphs'
+            label: Sektioner
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: above
+              type: entity_reference_revisions_entity_view
+              settings:
+                view_mode: default
+                link: ''
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -7
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: c76fca84-ec18-44ac-8226-79742e072adb
+          6d509219-4651-4778-86f6-d491d52aae0d:
+            id: 'entity_field:node:field_vih_cource_contact_person'
+            label: 'Contact Person'
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: above
+              type: author
+              settings: {  }
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -9
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: 6d509219-4651-4778-86f6-d491d52aae0d
+          cdf8412b-b123-49e3-9fbd-b6aad413fe8d:
+            id: 'entity_field:node:field_vih_course_periods'
+            label: 'Period:'
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: above
+              type: entity_reference_label
+              settings:
+                link: false
+              third_party_settings: {  }
+              weight: 0
+            region: left
+            weight: -4
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: cdf8412b-b123-49e3-9fbd-b6aad413fe8d
+          d8498d66-ba2d-45fc-a39f-e396c051dc70:
+            id: 'entity_field:node:field_vih_course_price'
+            label: Price
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: above
+              type: number_decimal
+              settings:
+                thousand_separator: ''
+                decimal_separator: .
+                scale: 2
+                prefix_suffix: true
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -8
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: d8498d66-ba2d-45fc-a39f-e396c051dc70
+          cc2c11c3-b703-45ba-93e7-db4775b285ba:
+            id: 'entity_field:node:field_vih_course_subsc_price'
+            label: 'Subscription price'
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: above
+              type: number_decimal
+              settings:
+                thousand_separator: ''
+                decimal_separator: .
+                scale: 2
+                prefix_suffix: true
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -6
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: cc2c11c3-b703-45ba-93e7-db4775b285ba
+          cb90f137-f963-4518-a74f-258b85f8dd89:
+            id: 'entity_field:node:field_vih_course_week_price'
+            label: 'Week price'
+            provider: ctools_block
+            label_display: '0'
+            formatter:
+              label: above
+              type: number_decimal
+              settings:
+                thousand_separator: ''
+                decimal_separator: .
+                scale: 2
+                prefix_suffix: true
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -5
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+            uuid: cb90f137-f963-4518-a74f-258b85f8dd89
+          2ddfcb30-d080-469c-ac16-2c93549017f3:
+            id: 'entity_field:node:field_vih_course_periods'
+            label: 'Period:'
+            provider: ctools_block
+            label_display: visible
+            formatter:
+              label: above
+              type: entity_reference_label
+              settings:
+                link: true
+              third_party_settings: {  }
+              weight: 0
+            region: right
+            weight: -2
+            uuid: 2ddfcb30-d080-469c-ac16-2c93549017f3
+            context_mapping:
+              entity: '@panelizer.entity_context:entity'
+        id: panels_variant
+        label: Default
+        uuid: 8cc64bf8-808c-48df-b6ed-dc141848f02e
+        weight: 0
+        layout: twocol
+        layout_settings: {  }
+        page_title: null
+        storage_type: panelizer_default
+        storage_id: 'node:vih_long_cource:default:default'
+        builder: ipe
+        pattern: panelizer
+        static_context: {  }
 id: node.vih_long_cource.default
 targetEntityType: node
 bundle: vih_long_cource
@@ -36,21 +227,6 @@ content:
     weight: 102
     settings: {  }
     third_party_settings: {  }
-  field_course_image:
-    weight: 107
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-  field_laengde:
-    weight: 108
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
   field_paragraphs:
     weight: 109
     label: above
@@ -61,20 +237,22 @@ content:
     type: entity_reference_revisions_entity_view
   field_vih_cource_contact_person:
     weight: 106
-    label: above
-    settings: {  }
+    label: hidden
+    settings:
+      view_mode: compact
+      link: false
     third_party_settings: {  }
-    type: author
+    type: entity_reference_entity_view
   field_vih_course_periods:
     weight: 101
     label: above
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     type: entity_reference_label
   field_vih_course_price:
     weight: 103
-    label: above
+    label: hidden
     settings:
       thousand_separator: ''
       decimal_separator: .
@@ -84,7 +262,7 @@ content:
     type: number_decimal
   field_vih_course_subsc_price:
     weight: 104
-    label: above
+    label: hidden
     settings:
       thousand_separator: ''
       decimal_separator: .
@@ -94,7 +272,7 @@ content:
     type: number_decimal
   field_vih_course_week_price:
     weight: 105
-    label: above
+    label: hidden
     settings:
       thousand_separator: ''
       decimal_separator: .
