--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.vih_class_package_accordion.yml
@@ -36,6 +36,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_p_related_classes: true
+  field_vih_class_package_color: true
   field_vih_cp_description: true
   field_vih_cp_subtitle: true
   field_vih_show_on_frontpage: true
